* Version 4.1.x  --  Stable Branch

Patchlevel 4

Released on ???


** Bug Fixes

- [Enblend] Fix a non-dereferencable vector iterator which led to a
  segfault.

- [Enblend] Avoid a division-by-zero in the Annealing Optimizer.


Patchlevel 3

Released on March 19, 2014.


** Bug Fixes

- [Enblend only] Fix problem of multiple, almost-identical seamlines
  that produce inexplicable black areas in the output panorama.


** Package Maintainer Stuff

- Little CMS version 2.5 or later is now required to build.  Prior
  versions of LCMS sometimes produced output images that were lighter
  or darker than the input images.


Patchlevel 2

Released on October 7, 2013.

** Bug Fixes

- [Enblend and Enfuse] Fix a bug in the highlight-recovery that caused
  Enfuse to bail out with the uncaught exception
    "Minimizer1D::set_bracket: minimum not bracketed".
  This addresses LaunchPad Bug #1214004.

- [Enfuse] Clean up seemingly random, bright-colored pixels that
  sometimes show up when fusing images with high contrast and "large"
  color profiles.


Patchlevel 1

Released on February 15, 2013.

** Bug Fixes

- [Enblend only] Fix a race condition in the seam-line optimizer that
  can cause wrongly placed seams.

- [Enblend and Enfuse] Use a per-thread storage of all OpenMP
  Vigra-functors.  This avoids data races.

- [Enblend and Enfuse] The Boost implementation of the `Mersenne
  Twister' random number generator caused segmentation faults when
  used in the OpenMP-enabled versions of Enblend and Enfuse.  The new
  implementation is based on the GNU Scientific Library (GSL), which
  plays nicely with concurrent accesses.

- [Enblend only] Correct a mistake that causes overlapping images with
  multiple seams to be blended incorrectly.

- [Enblend only] Require the OpenGL extension
  `GL_ARB_texture_rectangle' for the `--gpu' option to work.  This
  does away with a pesky warning of OpenGL drivers that do support
  this extension and avoids crashes with drivers that don't.
